--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "elasticquent/elasticquent",
+  "name": "lethi2k/elasticquent",
   "type": "library",
   "description": "Maps Laravel Eloquent models to Elasticsearch types.",
   "keywords": [
@@ -7,12 +7,12 @@
     "eloquent",
     "laravel"
   ],
-  "homepage": "https://github.com/elasticquent/Elasticquent",
+  "homepage": "https://github.com/lethi2k/elasticquent",
   "license": "MIT",
   "authors": [
     {
       "name": "Adam Fairholm",
-      "email": "adam.fairholm@gmail.com",
+      "email": "ledinhthi2909@gmail.com",
       "homepage": "http://adamfairholm.com"
     }
   ],
