--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   },
   "autoload": {
     "psr-4": {
-      "elasticquent\\": "src/"
+      "lethi2k\\elasticquent\\": "src/"
     }
   },
   "extra": {
