--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Adam Fairholm",
+      "name": "Le Thi",
       "email": "ledinhthi2909@gmail.com",
       "homepage": "http://adamfairholm.com"
     }
